# Harinero

./: .gitignore  pyproject.toml  requirements.txt
configs/: config.json  config_colab.json  test_config.json
docs/: setup-guide.md
notebooks/examples/: 00_installation_confirmation.ipynb  01_harinero_structures_example.ipynb  02_tanda_generator_example.ipynb  03_song_finder_example.ipynb  04_harinero_tanda_creator_example.ipynb
src/: __init__.py
src/core/: __init__.py
src/core/database/: __init__.py  finder.py  loader.py
src/core/models/: structures.py
src/core/tanda/: harinero_tanda_creator.py  tanda_generator.py
src/harinero/core/database/: finder.py  loader.py
src/harinero/core/models/: __init__.py  structures.py
src/harinero/core/tanda/: __init__.py
src/harinero/ml/: __init__.py
src/harinero/ml/clustering/: __init__.py  clustering.py
src/harinero/ml/features/: __init__.py  normalizer.py  triplet_generator.py
src/harinero/utils/: config.py
src/ml/: __init__.py
src/ml/features/: feature_processor.py
src/ml/models/: __init__.py  model_pytorch.py
src/ml/preprocessing/: __init__.py
src/tools/audio_tool/: AudioPlayer.py  audio-tool-base.py  phrase_dataset.py
src/utils/: __init__.py  config.py
tests/: conftest.py
tests/test_core/: create_existing_database.py  test_harinero_tanda_creator.py  test_song_finder.py  test_structures.py  test_tanda_generator.py
tests/test_ml/: __init__.py  base.py  conftest.py
tests/test_ml/test_features/: __init__.py  conftest.py  test_extractors.py  test_feature_extractor.py
(+12 files in other folders)
